--- a/src/app/components/FlipCard.module.css
+++ b/src/app/components/FlipCard.module.css
@@ -149,6 +149,8 @@
   100% {
       transform: translateY(25px) scale(1.3); /* Scale for mobile */
       z-index: 4;
+      width: 95%;
+      height: 60%;
   }
 }
 
@@ -172,6 +174,8 @@
   0% {
       transform: translateY(25px) scale(1.3); /* Scale for mobile */
       z-index: 4;
+      width: 95%;
+      height: 60%;
   }
   50% {
       transform: translateY(-245px);
